--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,10 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:11.0.4'
     compile 'com.google.firebase:firebase-crash:11.0.4'
     compile 'com.firebase:firebase-client-android:2.3.1'
+    implementation 'com.google.android.gms:play-services-maps:11.0.4'
+
     testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
