--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:11.0.4'
 
     testImplementation 'junit:junit:4.12'
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
